<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond"
    android:orientation="vertical"
    tools:context=".gestionCompte.CompteActivity">

    <ImageButton
        android:id="@+id/img_bt"
        android:background="@color/fond"
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/quizz" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/name"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/c_pseudo"
        android:inputType="text" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/firstname"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableLeft="@drawable/ic_action_name"
        android:hint="@string/c_prenom"
        android:inputType="text" />

    <EditText
        android:hint="@string/c_mdp"
        android:layout_gravity="center"
        android:id="@+id/mdp"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/b_valide"
        android:layout_width="153dp"
        android:layout_height="65dp"
        android:text="@string/bt_valider"
        android:background="@color/colorB"
        />
</LinearLayout>






